--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: PlayfairDisplay Bold
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-Bold.ttf
+    - family: PlayfairDisplay MediumItalic
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-MediumItalic.ttf 
+    - family: PlayfairDisplay Regular
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
