--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,15 @@ flutter:
     - family: PlayfairDisplay Regular
       fonts:
         - asset: assets/fonts/PlayfairDisplay-Regular.ttf
+    - family: Inter Bold
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Bold.ttf
+    - family: Inter Medium
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Medium.ttf
+    - family: Inter Regular
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
