--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,15 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/nova.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
     # Code Generation
   build_runner: ^2.4.13
