--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,7 +101,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
-  image_path: "assets/images/nova.png"
+  image_path: "assets/images/n.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
     # Code Generation
