--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
 
   uuid: ^4.3.3
   intl: ^0.20.2
+  emojis: ^0.9.9
 
   # Background Tasks
   workmanager: ^0.9.0+3
@@ -97,6 +98,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
   flutter_launcher_icons: ^0.14.4
+  emoji_picker_flutter: ^2.2.0
 
 flutter_launcher_icons:
   android: "ic_launcher"
