--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,9 @@ dependencies:
   # Background Tasks
   workmanager: ^0.9.0+3
 
+  # Local Notifications
+  flutter_local_notifications: ^20.1.0
+
   # Permissions
   permission_handler: ^12.0.1
   equatable: ^2.0.7
